# YOLO_Realsense_ROS

./: README.md  package.xml  setup.py  yolo_detections.rviz
config/: rviz_config.rviz
launch/: realsense_launch.py
yolo_realsense/: yolo_processor.py
